--- a/BeneficiaryService/src/main/resources/application.properties
+++ b/BeneficiaryService/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=8085
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=myairtrip
+spring.data.mongodb.database=abcbank
 
 eureka.client.serviceUrl.defaultZone: http://127.0.0.1:8761/eureka/
